--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8" />
     <title>Rock, Paper, Scissors</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css"
   </head>
   <body>
-    <div>
-      This is a blank document, check the console since there is where we are
-      gonna play the game for the moment. Have Fun.
+    <div class="content">
+      <h1>ROCK PAPER SCISSORS GAME</h1>
+      <div class="explanation">
+        <p>
+          This a is a simple UI for the ROCK - PAPER - SCISSORS project
+          developed in The Odin Project
+        </p>
+        <p>In order to start, click one of the choices</p>
+        <p>LET'S GET READY TO RUMBLE!!!</p>
+      </div>
+      <div class="buttons">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+      </div>
+
+      <div class="scores">
+        <div class="player">
+          <h3>PLAYER SCORE</h3>
+          <div id="playerScore"></div>
+        </div>
+        <div class="computer">
+          <h3>COMPUTER SCORE</h3>
+          <div id="computerScore"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
