adding a little wording to the index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
           This a is a simple UI for the ROCK - PAPER - SCISSORS project
           developed in The Odin Project
         </p>
-        <p>In order to start, click one of the choices</p>
+        <p>
+          In order to start, click one of the choices, the winner will be
+          displayed when someone reaches 5 points
+        </p>
         <p>LET'S GET READY TO RUMBLE!!!</p>
       </div>
       <div class="buttons">
